--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -7,7 +7,9 @@
       "inheritEnvironments": [ "msvc_x64_x64" ],
       "buildRoot": "${projectDir}\\out\\build\\${name}",
       "installRoot": "${projectDir}\\out\\install\\${name}",
-      "cmakeToolchain": "-DCMAKE_TOOLCHAIN_FILE=C:\\Users\\oo43\\source\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake "
+      "cmakeCommandArgs": "",
+      "buildCommandArgs": "",
+      "ctestCommandArgs": ""
     }
   ]
 }
